# brewup

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HOMEBREW_INSTALL.md  LICENSE  MACOS_SECURITY.md  Makefile  README.md  SETUP_HOMEBREW.md
.github/workflows/: release.yml
Formula/: brewup-source.rb  brewup.rb
examples/: daily-update.sh  setup-cron.sh
scripts/: calculate-sha256.sh  codesign-macos.sh
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  utils.rs
